Minimal implementation of JavaFX